<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_nav_inicio"
        android:title="@string/nav_inicio" />
    <item
        android:id="@+id/nav_mapa"
        android:icon="@drawable/ic_nav_mapa"
        android:title="@string/nav_mapa" />
    <!-- Hueco central reservado para el FAB de Reportar -->
    <item
        android:id="@+id/nav_placeholder"
        android:enabled="false"
        android:title=""
        android:icon="@android:color/transparent" />
    <item
        android:id="@+id/nav_reportes"
        android:icon="@drawable/ic_nav_reportes"
        android:title="@string/nav_reportes" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_nav_perfil"
        android:title="@string/nav_perfil" />
</menu>
